[project]
name = "py_volanalytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "quasar-chunawala", email = "quasar.chunawala@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aleatory>=1.0.1",
    "attrs>=25.3.0",
    "ipykernel>=6.29.5",
    "latex>=0.7.0",
    "numpy>=2.2.4",
    "scienceplots>=2.1.1",
    "matplotlib>=3.10.1",
    "setuptools>=77.0.3",
    "pip>=25.0.0",
    "twine>=6.1.0",
    "wheel>=0.45.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"