[project]
name = "py_volanalytics"
version = "0.1.2"
description = "Vol-fitting methods and pricing-analytics for volatility derivatives"
readme = "README.md"
authors = [
    { name = "quasar-chunawala", email = "quasar.chunawala@gmail.com" }
]
requires-python = ">=3.12"

dependencies = [
    "aleatory>=1.0.1",
    "attrs>=25.3.0",
    "ipykernel>=6.29.5",
    "latex>=0.7.0",
    "numpy>=2.2.4",
    "scienceplots>=2.1.1",
    "matplotlib>=3.10.1",
    "setuptools>=77.0.3",
    "pip>=25.0.0",
    "twine>=6.1.0",
    "wheel>=0.45.1",
    "pylint>=3.3.6",
    "docformatter>=1.7.5",
    "sphinx>=8.2.3",
    "python-docs-theme>=2025.2",
    "sphinx-rtd-theme>=3.0.2",
    "furo>=2024.8.6",
    "myst-parser>=4.0.1",
    "sphinx-pyscript>=0.1.0",
]

[project.urls]
Homepage="https://github.com/quasar-chunawala/py_volanalytics"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
